welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:2: error: ambiguous reference to overloaded definition,
both method - in class Int of type (x: Char)Int
and  method - in class Int of type (x: Short)Int
match expected type ?
	if (a - Math.abs(a) = 0 && b - Math.abs(b) = 0) {
              ^posNeg:5: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Short)Int
match expected type ?
		if (a + Math.abs(a) = 0 && b + Math.abs(b) = 0) {
                      ^